Add configuration properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 spring.main.banner-mode=off
 logging.level.root=OFF
+
+updater.repository=https://api.github.com/repos/fabricio-entringer/commons
+#-----
+updater.profile[0].name=DEV
+updater.profile[1].name=PROD
